src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/IconTabBar.less
/* ... */
.sapMITBFilterNegative:not(.sapMITBTextOnly) {
	color: var(--sapTab_Negative_IconColor);
	border-color: var(--sapTab_Negative_ForegroundColor);

	.sapMITBFilterExpandBtnSeparator {
		border-color: var(--sapTab_Negative_TextColor);
	}

	.sapMITBFilterExpandIcon.sapUiIcon {
		color: var(--sapTab_Negative_TextColor);
	}
}

.sapMITBFilterCritical {
	color: var(--sapTab_Critical_IconColor);
	border-color: var(--sapTab_Critical_ForegroundColor);

	.sapMITBFilterExpandBtnSeparator {
		border-color: var(--sapTab_Critical_TextColor);
	}

	.sapMITBFilterExpandIcon.sapUiIcon {
		color: var(--sapTab_Critical_TextColor);
	}
}

.sapMITH:not(.sapMITBTextOnly) {

	.sapMITBFilterNeutral {

		.sapMITBFilterExpandBtnSeparator {
			border-color: var(--sapTab_Neutral_TextColor);
		}

		&.sapMITBItem.sapMITBFilterWithItems  .sapMITBFilterExpandIcon.sapUiIcon {
			color: var(--sapTab_Neutral_TextColor);
		}
	}

	.sapMITBFilterPositive {

		.sapMITBFilterExpandBtnSeparator {
			border-color: var(--sapTab_Positive_TextColor);
		}

		&.sapMITBItem.sapMITBFilterWithItems  .sapMITBFilterExpandIcon.sapUiIcon {
			color: var(--sapTab_Positive_TextColor);
		}
	}

	.sapMITBSelected .sapMITBFilterPositive {
		background: var(--sapTab_Positive_Selected_Background);
		color: var(--sapTab_Positive_Selected_IconColor);
	}

	.sapMITBFilterNegative {

		.sapMITBFilterExpandBtnSeparator {
			border-color: var(--sapTab_Negative_TextColor);
		}

		&.sapMITBItem.sapMITBFilterWithItems  .sapMITBFilterExpandIcon.sapUiIcon {
			color: var(--sapTab_Negative_TextColor);
		}
	}

	.sapMITBSelected .sapMITBFilterNegative {
		background: var(--sapTab_Negative_Selected_Background);
		color: var(--sapTab_Negative_Selected_IconColor);
	}

	.sapMITBFilterCritical {

		.sapMITBFilterExpandBtnSeparator {
			border-color: var(--sapTab_Critical_TextColor);
		}

		&.sapMITBItem.sapMITBFilterWithItems  .sapMITBFilterExpandIcon.sapUiIcon {
			color: var(--sapTab_Critical_TextColor);
		}
	}

	.sapMITBSelected .sapMITBFilterCritical {
		background: var(--sapTab_Critical_Selected_Background);
		color: var(--sapTab_Critical_Selected_IconColor);
	}
}

.sapMITBSelected {

	.sapMITBContentArrow::after {
		background: @_sap_m_IconTabBar_SelectedTextColor;
	}

	&.sapMITBFilterNeutral .sapMITBContentArrow::after {
		background: var(--sapTab_Neutral_ForegroundColor);
	}

	&.sapMITBFilterPositive .sapMITBContentArrow::after {
		background: var(--sapTab_Positive_ForegroundColor);
	}

	&.sapMITBFilterNegative .sapMITBContentArrow::after {
		background: var(--sapTab_Negative_ForegroundColor);
	}

	&.sapMITBFilterCritical .sapMITBContentArrow::after {
		background: var(--sapTab_Critical_ForegroundColor);
	}

	.sapMITBFilterDefault {
		background: @_sap_m_IconTabBar_SelectedTextColor;
		color: var(--sapTab_Selected_IconColor);
	}
}

.sapMITHShowSubItemsIcon {
	bottom: -1.5px;
	position: relative;
}

/* Phone device */

.sapUiMedia-Std-Phone .sapMITH.sapUiSizeCompact {

	&.sapMITBInLine.sapMITBTextOnly {

		.sapMITBHead .sapMITBContentArrow {
			height: 0.875rem;
		}
	}

	&.sapMITBTextOnly {

		.sapMITBHead .sapMITBContentArrow {
			height: 0.75rem;
		}
	}
}

.sapMITH.sapMITBNoText .sapMITBHead {

	> .sapMITBSepLine {
		margin: 0.25rem 0.25rem 0 0;
	}
}

.sapMITH.sapUiSizeCompact {

	&.sapMITBNoText .sapMITBHead {

		> .sapMITBSepLine {
			margin: 0 0.125rem 0 0.125rem;
		}
	}

	.sapMITBSepLine {
		border: unset;
		border-right: 1px solid @_sap_m_IconTab_Bar_Separator_Line;
		margin: 0.625rem 0.125rem 0 0.125rem;
	}
}

.sapMITBAll {

	.sapMITBTab {
		margin-top: 0.4rem;
	}

	&.sapMITBHorizontal {

		.sapMITBTab {
			margin-top: 0;
		}

		+ .sapMITBSepLine {
			margin-top: 0.5rem;
		}
	}

	.sapMITBCount {
		font-family: var(--sapFontBoldFamily);
		font-size: var(--sapFontHeader3Size);
	}

	.sapMITBText {
		font-family: var(--sapFontHeaderFamily);
		font-size: var(--sapFontSmallSize);
	}
}

.sapMITBSepLine {
	border: unset;
	border-right: 1px solid @_sap_m_IconTab_Bar_Separator_Line;
}

.sapUiMedia-Std-Phone {

	.sapMITBSepLine {
		margin: 0.75rem 0.25rem 0;
	}
}

/* Custom focus outline */
html.sap-desktop {

	.sapMITBItem:not(.sapUiDnDDragging):focus.sapMITBAll {

		&::after {
			top: 0.75rem;
			bottom: 1.75rem;
		}
	}

	.sapMITBFilter .sapMITBCount {
		color: var(--sapContent_LabelColor);
		font-family: var(--sapFontFamily);
		font-size: @sapMFontMediumSize;
	}

	.sapMITH.sapUiSizeCompact {

		.sapMITBItem:focus.sapMITBAll {

			&::after {
				bottom: 1.3rem;
				top: 0.125rem;
			}
		}

		.sapMITBItem .sapMITBFilterIcon {
			margin-right: @_sap_m_IconTabBar_HorizontalTextPaddingLeft;
		}
	}

	.sapMITHStartOverflow,
	.sapMITHEndOverflow {

		.sapMITBItem:not(.sapUiDnDDragging):focus {

			&::after {
				border-radius: 1.75rem;
			}
		}
	}

	.sapMITH {

		.sapMITHStartOverflow,
		.sapMITHEndOverflow {

			.sapMITBItem {

				&:active {
					background-color: @_sap_m_IconTabBar_Overflow_BackgroundColorPressed;
					border: 1px solid @_sap_m_IconTabBar_Overflow_BorderColorPressed;
				}

				&:active::after {
					/* when overflow is pressed, hide the focus */
					border-color: transparent;
				}
			}
		}
	}
}

.sapUiMedia-Std-Tablet,
.sapUiMedia-Std-Desktop {

	.sapMITHEndOverflow {
		padding-left: 0.188rem;
		margin-left: 0px;
	}
}

html.sap-desktop {

	.sapMITBItem:not(.sapUiDnDDragging):focus .sapMITBFilterIcon {

		&::after {
			top: -5px;
			bottom: -5px;
			right: -5px;
			left: -5px;
			border-radius: inherit;
		}
	}
}

.sapUiMedia-Std-Phone {

	.sapMITBItem:not(.sapUiDnDDragging):focus.sapMITBAll {

		&::after {
			right: 6px !important;
			left: -1px !important;
		}
	}
}
/* ... */

